added global count variable

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <button id="decrease">-</button>
     </div>
     <script>
+        var count = 0;
         
         document.getElementById("increase").addEventListener("click", function(){
             count++;
