--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         body{
             font-family: 'Roboto', sans-serif;
-            background-color: #273c75;
+            background-color: #4eae33;
             color: white;
             text-align: center;
         }
